tweak compiler settings