@@ -168,6 +168,12 @@ subprojects { project ->
             }
         }
 
+        compileGroovy {
+            configure(groovyOptions.forkOptions) {
+                jvmArgs = [ '-Xmx768m', '-XX:MaxPermSize=256m']
+            }
+        }
+
     }
 
     publishing {
